--- a/CLOUD/CLOUD/appsettings.json
+++ b/CLOUD/CLOUD/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Token":  "my top secret key",
+    "connectionString": "Host=vhealth.me;Port=5432;Database=cloudip;Username=cloudip;Password=cocacola"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
